src/objects/SPE_WeightInitialization__c.object
<CustomObject>
    <fields>
        <fullName>Algorithm__c</fullName>
        <label>Algorithm</label>
        <picklist>
            <picklistValues>
                <fullName>Weighted Average by Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average by Volume</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>GLOBAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETWORK IMPLEMENTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEMS INTEGRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANAGED SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETWORK PLANNING AND OPTIMIZATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE SOFTWARE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS SUPPORT SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIA AND ENTERTAINMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RADIO FREQUENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SECURITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SINGLE RAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RADIO CLUSTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM AND MATURE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERFECT VOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIQUID CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VALUE CREATION MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDD LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE CLUSTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM MODULE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEM AND OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMALL CELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3G CORE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>GLOBAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE SOFTWARE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL NETWORKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>NETWORK PRODUCTS PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT (INP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIRECT SERVICES PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>SYSTEMS AND EMBEDDED POWER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOGISTICS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFESSIONAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVEL &amp; FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D AND IT SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING AND MANUFACTURING EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STANDARD AND INTERCONNECT COMPONENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECHANICS &amp; RF PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF &amp; CUSTOM COMPONENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI MATERIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTERNAL WORKFORCE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING MS, NPO &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING NI SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT HW &amp; CARE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOFTWARE SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP TRANSPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPAIR &amp; SPARES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPENDITURES REPORTED ERRONEOUSLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-MANAGED EXPENDITURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISCONTINUED BUSINESS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>PLATFORM SYSTEM BOARDS AND ATCA SHELVES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER LOGISTICS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM WAREHOUSING (GLOBAL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM VALUE ADDED LOGISTICS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM INBOUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM OUTBOUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM LAST MILE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM DROP OFF POINT (LOCAL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWS WAREHOUSING AND VALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORPORATE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAINING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC &amp; IT PERIPHERAL DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT SUBCONTRACTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT INFRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOICE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIRECT SOFTWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING AND MANUFACTURING EQUIPMENT (TME)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS - RA 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS - CORE 2G AND 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS - OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS - BBA AND NBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS - MWR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS - MULTIRADIO 3G / LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS - MULTIRADIO 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL TRANSCEIVERS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>EGYPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HONGKONG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MACAU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAIWAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAPAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THAILAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIETNAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MALAYSIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHILIPPINES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SINGAPORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW ZEALAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDONESIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH KOREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UKRAINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUSSIAN FED.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DENMARK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESTONIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEORGIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LITHUANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORWAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWEDEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>2G RADIO COMMANDER (RC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3G RADIO COMMANDER (RC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 AGENTS &amp; MEDIATORS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM MWR (INCL. FLEXIHUB M., TRANSMISSION LOADER, HOPPER M.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMS10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER (SC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETMANAGER (NETM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISUITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>@VANTAGE COMMANDER (@C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP MANAGER (IPM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCESS INTEGRATOR (ACI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADVANCED PROVISIONING MANAGER (APM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETACT BB MANAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARRIER ETHERNET MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETVIEWER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATION SW (ASW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM HW AND SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETACT FOR RADIO 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONNECT NMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETACT FOR RADIO 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETACT OF LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETACT WIMAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETACT FOR I-HSPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETACT FOR TETRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRACE VIEWER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETACT FOR CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETACT FOR FIXED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETACT IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Sub Region</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Asia North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Asia South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Aus&amp;NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR SEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UGL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Weight Initialization</label>
    <nameField>
        <displayFormat>WI-{000000}</displayFormat>
        <label>Weight  In Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weight Initialization</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>